name:           reflex-dom-nested-routing
version:        0.0.1
synopsis:       Nested client-side routing for Reflex-DOM
description:    See README at <https://github.com/3noch/reflex-dom-nested-routing#readme>
category:       Web
maintainer:     Elliot Cameron <elliot@graftedin.io>
copyright:      2017 Elliot Cameron
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

library
  hs-source-dirs: .

  ghc-options:
    -Wall
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wno-unused-do-bind
    -O2
  build-depends:
      base
    , bytestring
    , exception-transformers
    , jsaddle
    , lens
    , mtl
    , primitive
    , ref-tf
    , reflex
    , reflex-dom-core
    , reflex-dom-contrib
    , text
    , uri-bytestring
  exposed-modules:
      Reflex.Dom.NestedRoute
      Reflex.Dom.RouteWriter
  default-language: Haskell2010
